--- a/kikakusyo_project/templates/hotel/plan_list.html
+++ b/kikakusyo_project/templates/hotel/plan_list.html
@@ -41,7 +41,7 @@
                                 {% comment %} <div class="plan-container d-flex justify-content-between align-itmes-start mb-4">
                                     <div class="plan-info p-3 border"> {% endcomment %}
                                 <tr class="text-align: start"> 
-                                    <td class="text-center">   
+                                    <td>   
                                         <h2>{{ plan.name|default:"No Name" }}</h2>
                                         <p>人数： {{ plan.people|default:"N/A" }}</p>
                                         <p>部屋タイプ： {{ plan.room_type|default:"N/A" }}</p>
@@ -50,7 +50,7 @@
                                     </td>
                                 {% comment %} <div class="plan-details p-3 border"> {% endcomment %}
                                     <td>
-                                        <ul class="centered-list tight-list">
+                                        <ul>
                                             <li>プラン名：{{ plan.name }}</li>
                                             <li>料金：{{ plan.price }}円</li>
                                             <li>残部屋数：{{ plan.stock }}部屋</li>
@@ -64,9 +64,8 @@
                                                     <li>
                                                         数量：
                                                         <input type="number" id="quantity_{{ plan.plan_id }}" name="quantity_{{ plan.plan_id }}" min="1" max="{{ plan.stock }}">
-                                                    <br>
-                                                        <button id="add_product_{{ plan.plan_id }}" type="button" class="btn btn-primary add-to-cart">予約注文に追加</button>
                                                     </li>
+                                                    <p class="text-center"><button id="add_product_{{ plan.plan_id }}" type="button" class="btn btn-primary add-to-cart">予約注文に追加</button></p>
                                                 {% endif %}
                                                 
                                             {% endif %}
@@ -179,24 +178,6 @@
 
 {% block extra_css %}
 <style>
-    .centered-list {
-        display: inline-block;
-        text-align: center;
-    }
-
-    .tight-list {
-        padding-left: 20px; /* 調整這個值來控制黑點與文字的距離 */
-        margin-left: 0;
-    }
-
-    .tight-list li {
-        padding-left: 5px; /* 微調文字與黑點之間的間距 */
-    }
-
-    td {
-        text-align: center; /* 確保單元格內容居中 */
-    }
-
     .table {
         width: 100%;
         border-collapse: collapse;
@@ -245,54 +226,5 @@
         max-width: 100%;
         height: auto;
     }
-    {% comment %} .plan-images img {
-        width: 200px;  
-        height: auto;  
-        object-fit: cover;
-        
-    } {% endcomment %}
-    {% comment %} .plan-info {
-        width: 30%;
-    }
-    .plan-details {
-        width: 40%;
-    }
-    .plan-images {
-        width: 30%;
-    } {% endcomment %}
-    {% comment %} .plans-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        gap: 20px; 
-    }
-
-    .plan-container {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        width: 100%;
-        border-bottom: 1px solid #eee;
-        padding-bottom: 10px;
-    }
-    .plan-info, .plan-details, .plan_images {
-        border: 1px solid #ccc;
-        padding: 10px;
-        margin: 0px;
-        flex: 1;
-        min-width: 200px;
-    }
-
-    .plan-info h1, .plan-info h6, .plan-details ul {
-        margin: 0;
-        padding: 0;
-    } 
-    .plan-details ul {
-        list-style: none;
-        padding-left: 0;
-    }
-    .plan-info h1, .plan-info h6 {
-        text-align: center;
-    } {% endcomment %}
 </style>
 {% endblock %}
